/settings JSONResult{data=map[string]float64}
